# Humanoid

./: .gitignore  CYTRON_QUICKSTART.md  CYTRON_RC_PWM_GUIDE.md  PROJECT_OVERVIEW.md  README.md  SETUP_GUIDE.md  test_system.py
install/: local_setup.sh  setup.sh
install/humanoid_motor_control/share/humanoid_motor_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/humanoid_vlm_bridge/share/ament_index/resource_index/package_run_dependencies/: humanoid_vlm_bridge
install/humanoid_vlm_bridge/share/ament_index/resource_index/parent_prefix_path/: humanoid_vlm_bridge
install/humanoid_vlm_bridge/share/humanoid_vlm_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/humanoid_vlm_bridge/share/humanoid_vlm_bridge/cmake/: humanoid_vlm_bridgeConfig-version.cmake  humanoid_vlm_bridgeConfig.cmake
install/humanoid_vlm_bridge/share/humanoid_vlm_bridge/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/humanoid_motor_control/: CMakeLists.txt  package.xml
src/humanoid_motor_control/config/: motor_control.yaml
src/humanoid_motor_control/include/humanoid_motor_control/: cytron_controller.hpp
src/humanoid_motor_control/launch/: motor_control.launch.py
src/humanoid_motor_control/src/: cytron_controller.cpp  cytron_controller_node.cpp  diff_drive_controller.cpp  encoder_node.cpp
src/humanoid_vlm_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/humanoid_vlm_bridge/config/: vlm_config.yaml
src/humanoid_vlm_bridge/humanoid_vlm_bridge/: __init__.py  intent_executor.py  vlm_node.py
src/humanoid_vlm_bridge/launch/: vlm_bridge.launch.py
